deploy/kustomization/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hub.k8s.ucar.edu/musicbox/backend:latest
        command: ["/usr/bin/sh"]
        args: 
          - "-c"
          - "python interactive/manage.py makemigrations && python interactive/manage.py migrate && python -u interactive/manage.py runserver_plus 0.0.0.0:8000"
        ports:
        - containerPort: 8000
          name: http
        volumeMounts: 
          - name: db-data
            mountPath: /music-box-interactive/interactive/db-data
          - name: partmc-data
            mountPath: /music-box-interactive/interactive/partmc-volume
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: partmc-data
          persistentVolumeClaim:
            claimName: partmc-data
